[workspace]
resolver = "3"
members = [
    ".",
    "configurator_derive"
]

[workspace.package]
version = "0.1.0"
authors = ["Vlayd Detect"]
description = "A configuration library that combines abstract configs and their validation"
repository = "https://github.com/VlaydDetect/configurator"
edition = "2024"
keywords = ["config", "configuration", "toml", "json", "validation"]
categories = ["config"]

[workspace.dependencies]
configurator_derive = { version = "=0.1.0", package = "configurator_derive", path = "configurator_derive" }
regex = { version = "1.11.1", default-features = false, features = ["std"] }
serde = { version = "1.0.219", features = ["std", "derive"] }
serde_json = { version = "1.0.142", features = ["std"] }
serde_yaml = "0.9.34-deprecated"
toml_edit = { version = "0.23.3", default-features = false, features = ["serde", "parse"] }
compact_str = { version = "0.9.0", features = ["serde"] }
smallvec = { version = "1.15.1", features = ["serde"] }
unicode-segmentation = "1.12.0"
once_cell = "1.21.3"
url = "2.5.4"
idna = "1.0.3"

[package]
name = "configurator"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []

full = [
    "env",
    "json",
    "toml",
    "yaml",
    "derive",
    "unicode",
    "regex",
    "url",
    "email",
    "email-idna"
]
all_validators = [
    "url",
    "email",
    "email-idna"
]

env = []
json = ["dep:serde_json"]
toml = ["dep:toml_edit"]
yaml = ["dep:serde_yaml"]
derive = ["dep:configurator_derive"]
unicode = ["dep:unicode-segmentation"]
regex = ["dep:regex", "dep:once_cell", "configurator_derive?/regex"]
test = ["dep:tempfile", "dep:parking_lot"]

# Ready-name validators
url = ["dep:url"]
email = ["dep:regex"]
email-idna = ["dep:idna"]

[dependencies]
uncased = "0.9.10"
configurator_derive = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
serde.workspace = true
serde_json = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
toml_edit = { workspace = true, optional = true }
compact_str.workspace = true
smallvec.workspace = true
unicode-segmentation = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
url = { workspace = true, optional = true }
idna = { workspace = true, optional = true }

tempfile = { version = "3.20.0", optional = true }
parking_lot = { version = "0.12.4", optional = true }

[dev-dependencies]
tempfile = "3.20.0"
parking_lot = "0.12.4"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(any(target_pointer_width = "8", target_pointer_width = "16", target_pointer_width = "32"))'.dependencies]
atomic = "0.6.0"